Use "safe" flag to prevent align-items cutting off overflowing page view
Fixes zotero/zotero#3257

--- a/pdfjs/viewer.css
+++ b/pdfjs/viewer.css
@@ -31,7 +31,7 @@ body {
 
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	align-items: safe center;
 	gap: 10px;
 	padding: 18px;
 }
